data_engineering/infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: boardgame-nlp
  labels:
    name: boardgame-nlp
    app: boardgame-nlp
    environment: production
